# jhdnn

./: .gitignore  CMakeLists.txt  README.md
cudnn/include/: cu_conv.cuh  cu_core.cuh  cu_dense.cuh  cu_linear.cuh
cudnn/src/: conv.cu  cu_conv.cu  cu_core.cu  cu_dense.cu  cu_linear.cu
include/: jhdnn.cuh
jhdnn/include/: jh_conv.cuh  jh_core.cuh
jhdnn/src/: jh_conv.cu  jh_core.cu
test/: CMakeLists.txt
test/conv_forward/: CMakeLists.txt  conv.cu
